<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/left_drawer_layout_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="20dp"
    android:paddingTop="80dp"
    android:gravity="center_horizontal" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_launcher"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_h1"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/text_h4"
        android:gravity="center_horizontal"/>
    
    <Button
        android:id="@+id/update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_btn_update"
        android:layout_marginBottom="10dp"
        android:textColor="#FFF"
        android:text="@string/txt_btn_update_version" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/selector_btn_logout"
        android:textColor="#FFF"
        android:text="@string/txt_btn_logout" />

</LinearLayout>
